MVCMovies/wwwroot/css/site.css
html {
    font-size: 14px;
    font-family: monospace;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
    font-family: monospace;
  }
}

.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
    font-family: monospace;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
}

.generator-text {
    text-align: center;
}

.gen-title {
    text-align: center;
    font-weight: bold;
    font-size: 45px;
}
.form {
    text-align: center;
}

.random-movie {
    text-align: left;
    background-color: lightgrey;
}

.gen-button {
    background-color: lightgray;
    border-radius: 40px;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    color: black;
    font-weight: bold;
    
}

#genre{
    font-size: 20px;
}

.home {
    text-align: center;
    background-color: aliceblue;
    font-family: monospace;
}
html, body {
    background-color: aliceblue; /* Use the color you want */
    margin: 0; /* Remove default margin to fill the entire viewport */
    padding: 0; /* Remove default padding to fill the entire viewport */
}

.random-movie{
    background-color: aliceblue;

}

.caption{
    
}
.col-md-4{
    text-decoration: none;
}

.thumbnail {
    text-decoration: none;
    border-radius: 25px;
}

.form {
    padding: 50px;
    font-size: 20px;
}

.gen-body {
    font-family: monospace;
}
.movie-display {
    font-family: monospace;
}
.table {
    font-family: monospace;
}
.create-body {
    font-family: monospace;
}
.random-movie{
    font-family: monospace;
}
.index-body {
    font-family: monospace;
}
.create-link{
    text-decoration: none;
}
.update-link {
    text-decoration: none;
}
/*.update-link {
    text-decoration: none;
    color: black;
}*/

